--- a/Readme.md.html
+++ b/Readme.md.html
@@ -1,7 +1,7 @@
 # Личный проект «Нёрдс»
 
 * Студент: [Евгений](https://up.htmlacademy.ru/htmlcss/27/user/1282191).
-* Наставник: `Неизвестно`.
+* Наставник: Никита Рогатнев.
 
 ---
 
