--- a/index.html
+++ b/index.html
@@ -5,8 +5,117 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
+    <header>
+      <a class="logo"><img src="" alt="Логотип" width="" height=""></a>
+      <nav>
+        <ul>
+          <li><a href="">СТУДИЯ</a></li>
+          <li><a href="">КЛИЕНТЫ</a></li>
+          <li><a href="">МАГАЗИН</a></li>
+          <li><a href="">КОНТАКТЫ</a></li>
+        </ul>
+        <ul>
+          <li><button type="button">ВОЙТИ</button></li>
+          <li><a class="box" href="">КОРЗИНА</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <main>
 
+      <h1>Дизайн студия «Nerds»</h1>
+
+      <section>
+        <h2>Фотогалерея</h2>
+        <img src="" alt="" width="" height="">
+      </section>
+
+      <section>
+        <h2>Преимущества</h2>
+
+        <div>
+          <p>Долго, дорого, скурпулезно</p>
+          <p>Математически выверенный дизайн<br>
+           для вашего сайта или мобильного приложения</p>
+          <a href="">УЗНАТЬ БОЛЬШЕ</a>
+        </div>
+
+        <div>
+          <img src="">
+          <p>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
+          <dl>
+            <dt>146<sup>%</sup></dt>
+            <dd>Уровень самоотдачи</dd>
+            <dt>100<sup>%</sup></dt>
+            <dd>Соблюдение сроков</dd>
+            <dt>50<sup>%</sup></dt>
+            <dd>Минимальная предоплата</dd>
+          </dl>
+        </div>
+      </section>
+
+      <section>
+        <h2>Предоставляемые услуги</h2>
+
+        <p>Мы - маленькая, но гордая<br>
+          дизайн-студия из Краснодара.</p>
+        <p>Исповедуем принципы минимализма и простоты. Ставим математический расчет<br>
+          превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <p>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
+
+        <ul>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+
+        <ul>
+          <li>
+            <h3>ВЕБ-САЙТЫ</h3>
+            <img src="" width="" height="">
+            <p>Мир никогда не будет прежним<br>
+              после того как увидит ваш сайт!</p>
+            <a href="">ЗАКАЗАТЬ</a>
+          </li>
+          <li>
+            <h3>ПРИЛОЖЕНИЯ</h3>
+            <img src="" width="" height="">
+            <p>Покорите ТОП=10 приложений в<br>
+              AppStore и Google Play</p>
+            <a href="">ЗАКАЗАТЬ</a>
+          </li>
+          <li>
+            <h3>ПРЕЗЕНТАЦИИ</h3>
+            <img src="" width="" height="">
+            <p>Вы даже не подозреваете,<br>
+              насколько вы изумительны!</p>
+            <a href="">ЗАКАЗАТЬ</a>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Выполненные проекты</h2>
+        <ul>
+          <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="" alt="HTMLAcademy" width="" height="">HTML и CSS, уровень 1</a></li>
+          <li><a href=""><img src=""></a></li>
+          <li><a href=""><img src=""></a></li>
+          <li><a href=""><img src=""></a></li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <h2>Контакты</h2>
+      <img src="">
+
+      <div>
+        <p>Давайте дружить, это выгодно!</p>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+        <a href="#">Вконтакте</a>
+        <a href="#">Фейсбук</a>
+        <a href="#">Инстаграм</a>
+      </div>
+    </footer>
   </body>
 </html>
