--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-    <header>
+    <header class="header-top">
       <a class="logo"><img src="" alt="Логотип" width="" height=""></a>
-      <nav>
+      <nav class="menu">
         <ul>
-          <li><a href="">СТУДИЯ</a></li>
-          <li><a href="">КЛИЕНТЫ</a></li>
-          <li><a href="">МАГАЗИН</a></li>
-          <li><a href="">КОНТАКТЫ</a></li>
+          <li><a href="#">СТУДИЯ</a></li>
+          <li><a href="#">КЛИЕНТЫ</a></li>
+          <li><a href="#">МАГАЗИН</a></li>
+          <li><a href="#">КОНТАКТЫ</a></li>
         </ul>
         <ul>
-          <li><button type="button">ВОЙТИ</button></li>
-          <li><a class="box" href="">КОРЗИНА</a></li>
+          <li><a class="box" href="#">КОРЗИНА</a></li>
         </ul>
       </nav>
     </header>
@@ -25,22 +24,22 @@
 
       <h1>Дизайн студия «Nerds»</h1>
 
-      <section>
+      <section class="gallery">
         <h2>Фотогалерея</h2>
         <img src="" alt="" width="" height="">
       </section>
 
-      <section>
+      <section class="privilege">
         <h2>Преимущества</h2>
 
-        <div>
-          <p>Долго, дорого, скурпулезно</p>
+        <div class="privilege-item">
+          <h2>Долго, дорого, скурпулезно</h2>
           <p>Математически выверенный дизайн<br>
            для вашего сайта или мобильного приложения</p>
-          <a href="">УЗНАТЬ БОЛЬШЕ</a>
+          <a href="#">УЗНАТЬ БОЛЬШЕ</a>
         </div>
 
-        <div>
+        <div class="privilege-item">
           <img src="">
           <p>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
           <dl>
@@ -54,7 +53,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="services">
         <h2>Предоставляемые услуги</h2>
 
         <p>Мы - маленькая, но гордая<br>
@@ -75,32 +74,32 @@
             <img src="" width="" height="">
             <p>Мир никогда не будет прежним<br>
               после того как увидит ваш сайт!</p>
-            <a href="">ЗАКАЗАТЬ</a>
+            <a href="#">ЗАКАЗАТЬ</a>
           </li>
           <li>
             <h3>ПРИЛОЖЕНИЯ</h3>
             <img src="" width="" height="">
             <p>Покорите ТОП=10 приложений в<br>
               AppStore и Google Play</p>
-            <a href="">ЗАКАЗАТЬ</a>
+            <a href="#">ЗАКАЗАТЬ</a>
           </li>
           <li>
             <h3>ПРЕЗЕНТАЦИИ</h3>
             <img src="" width="" height="">
             <p>Вы даже не подозреваете,<br>
               насколько вы изумительны!</p>
-            <a href="">ЗАКАЗАТЬ</a>
+            <a href="#">ЗАКАЗАТЬ</a>
           </li>
         </ul>
       </section>
 
-      <section>
+      <section class="works">
         <h2>Выполненные проекты</h2>
         <ul>
           <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="" alt="HTMLAcademy" width="" height="">HTML и CSS, уровень 1</a></li>
-          <li><a href=""><img src=""></a></li>
-          <li><a href=""><img src=""></a></li>
-          <li><a href=""><img src=""></a></li>
+          <li><a href="#"><img src=""></a></li>
+          <li><a href="#"><img src=""></a></li>
+          <li><a href="#"><img src=""></a></li>
         </ul>
       </section>
     </main>
