--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="privilege-item">
           <h2>Долго, дорого, скурпулезно</h2>
-          <p>Математически выверенный дизайн<br>
+          <p>Математически выверенный дизайн
            для вашего сайта или мобильного приложения</p>
           <a href="#">УЗНАТЬ БОЛЬШЕ</a>
         </div>
@@ -54,11 +54,10 @@
       </section>
 
       <section class="services">
-        <h2>Предоставляемые услуги</h2>
 
-        <p>Мы - маленькая, но гордая<br>
+        <p>Мы - маленькая, но гордая
           дизайн-студия из Краснодара.</p>
-        <p>Исповедуем принципы минимализма и простоты. Ставим математический расчет<br>
+        <p>Исповедуем принципы минимализма и простоты. Ставим математический расчет
           превыше креатива. Работаем не покладая рук, как роботы.</p>
         <p>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
 
@@ -72,21 +71,21 @@
           <li>
             <h3>ВЕБ-САЙТЫ</h3>
             <img src="" width="" height="">
-            <p>Мир никогда не будет прежним<br>
+            <p>Мир никогда не будет прежним
               после того как увидит ваш сайт!</p>
             <a href="#">ЗАКАЗАТЬ</a>
           </li>
           <li>
             <h3>ПРИЛОЖЕНИЯ</h3>
             <img src="" width="" height="">
-            <p>Покорите ТОП=10 приложений в<br>
+            <p>Покорите ТОП=10 приложений в
               AppStore и Google Play</p>
             <a href="#">ЗАКАЗАТЬ</a>
           </li>
           <li>
             <h3>ПРЕЗЕНТАЦИИ</h3>
             <img src="" width="" height="">
-            <p>Вы даже не подозреваете,<br>
+            <p>Вы даже не подозреваете,
               насколько вы изумительны!</p>
             <a href="#">ЗАКАЗАТЬ</a>
           </li>
@@ -96,7 +95,7 @@
       <section class="works">
         <h2>Выполненные проекты</h2>
         <ul>
-          <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="" alt="HTMLAcademy" width="" height="">HTML и CSS, уровень 1</a></li>
+          <li><a href="#"><img src="" alt="HTMLAcademy" width="" height="">HTML и CSS, уровень 1</a></li>
           <li><a href="#"><img src=""></a></li>
           <li><a href="#"><img src=""></a></li>
           <li><a href="#"><img src=""></a></li>
@@ -104,16 +103,19 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer-chief">
       <h2>Контакты</h2>
       <img src="">
 
-      <div>
-        <p>Давайте дружить, это выгодно!</p>
+      <ul>
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Фейсбук</a></li>
+        <li><a href="#">Инстаграм</a></li>
+      </ul>
+      
+      <div class="sale">
+        <h3>Давайте дружить, это выгодно!</h3>
         <p>Скидка 10% для друзей из социальных сетей.</p>
-        <a href="#">Вконтакте</a>
-        <a href="#">Фейсбук</a>
-        <a href="#">Инстаграм</a>
       </div>
     </footer>
   </body>
