--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       </section>
 
-      <section class="services">
+      <section class="info">
 
         <p>Мы - маленькая, но гордая
           дизайн-студия из Краснодара.</p>
@@ -66,7 +66,9 @@
           <li>Мобильных приложений для iOS и Android</li>
           <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
+      </section>
 
+        <section class="services">
         <ul>
           <li>
             <h3>ВЕБ-САЙТЫ</h3>
@@ -112,7 +114,7 @@
         <li><a href="#">Фейсбук</a></li>
         <li><a href="#">Инстаграм</a></li>
       </ul>
-      
+
       <div class="sale">
         <h3>Давайте дружить, это выгодно!</h3>
         <p>Скидка 10% для друзей из социальных сетей.</p>
