--- a/index.html
+++ b/index.html
@@ -24,19 +24,53 @@
 
       <h1>Дизайн студия «Nerds»</h1>
 
-      <section class="gallery">
-        <h2>Фотогалерея</h2>
+      <section class="privilege">
+        <h2>Долго, дорого, скурпулезно</h2>
+        <p>Математически выверенный дизайн
+         для вашего сайта или мобильного приложения</p>
+        <a href="#">УЗНАТЬ БОЛЬШЕ</a>
         <img src="" alt="" width="" height="">
       </section>
 
-      <section class="privilege">
-        <h2>Преимущества</h2>
+      <section class="services">
+        <ul>
+          <li>
+            <h3>ВЕБ-САЙТЫ</h3>
+            <img src="" width="" height="">
+            <p>Мир никогда не будет прежним
+            после того как увидит ваш сайт!</p>
+            <a href="#">ЗАКАЗАТЬ</a>
+          </li>
+          <li>
+            <h3>ПРИЛОЖЕНИЯ</h3>
+            <img src="" width="" height="">
+            <p>Покорите ТОП=10 приложений в
+              AppStore и Google Play</p>
+            <a href="#">ЗАКАЗАТЬ</a>
+          </li>
+          <li>
+            <h3>ПРЕЗЕНТАЦИИ</h3>
+            <img src="" width="" height="">
+            <p>Вы даже не подозреваете,
+            насколько вы изумительны!</p>
+            <a href="#">ЗАКАЗАТЬ</a>
+          </li>
+        </ul>
+      </section>
 
-        <div class="privilege-item">
-          <h2>Долго, дорого, скурпулезно</h2>
-          <p>Математически выверенный дизайн
-           для вашего сайта или мобильного приложения</p>
-          <a href="#">УЗНАТЬ БОЛЬШЕ</a>
+      <section class="info-privilege">
+        <div class="info">
+          <p>Мы - маленькая, но гордая
+          дизайн-студия из Краснодара.</p>
+          <p>Исповедуем принципы минимализма и простоты. Ставим математический расчет
+          превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <p>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
+
+          <ul>
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильных приложений для iOS и Android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
         </div>
 
         <div class="privilege-item">
@@ -53,47 +87,6 @@
         </div>
       </section>
 
-      <section class="info">
-
-        <p>Мы - маленькая, но гордая
-          дизайн-студия из Краснодара.</p>
-        <p>Исповедуем принципы минимализма и простоты. Ставим математический расчет
-          превыше креатива. Работаем не покладая рук, как роботы.</p>
-        <p>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
-
-        <ul>
-          <li>Веб-сайтов любой сложности</li>
-          <li>Мобильных приложений для iOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных презентаций</li>
-        </ul>
-      </section>
-
-        <section class="services">
-        <ul>
-          <li>
-            <h3>ВЕБ-САЙТЫ</h3>
-            <img src="" width="" height="">
-            <p>Мир никогда не будет прежним
-              после того как увидит ваш сайт!</p>
-            <a href="#">ЗАКАЗАТЬ</a>
-          </li>
-          <li>
-            <h3>ПРИЛОЖЕНИЯ</h3>
-            <img src="" width="" height="">
-            <p>Покорите ТОП=10 приложений в
-              AppStore и Google Play</p>
-            <a href="#">ЗАКАЗАТЬ</a>
-          </li>
-          <li>
-            <h3>ПРЕЗЕНТАЦИИ</h3>
-            <img src="" width="" height="">
-            <p>Вы даже не подозреваете,
-              насколько вы изумительны!</p>
-            <a href="#">ЗАКАЗАТЬ</a>
-          </li>
-        </ul>
-      </section>
-
       <section class="works">
         <h2>Выполненные проекты</h2>
         <ul>
@@ -106,8 +99,14 @@
     </main>
 
     <footer class="footer-chief">
-      <h2>Контакты</h2>
-      <img src="">
+      <section class="contacts">
+        <h2>Контакты</h2>
+        <p>NERDS DESIGN STUDIO</p>
+        <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
+        <p>тел. +7(812) 275-75-75</p>
+        <a href="#">Напишите нам</a>
+        <img src="">
+      </section>
 
       <ul>
         <li><a href="#">Вконтакте</a></li>
