--- a/catalog.html
+++ b/catalog.html
@@ -6,12 +6,12 @@
   </head>
   <body>
   <header class="header-top">
-    <a class="logo"><img src="" alt="Логотип" width="" height=""></a>
+    <a class="logo" href="index.html"><img src="" alt="Логотип" width="" height=""></a>
     <nav class="menu">
       <ul>
-        <li><a href="#">СТУДИЯ</a></li>
-        <li><a href="#">КЛИЕНТЫ</a></li>
-        <li><a href="#">МАГАЗИН</a></li>
+        <li><a >СТУДИЯ</a></li>
+        <li><a >КЛИЕНТЫ</a></li>
+        <li><a >МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
       </ul>
       <ul>
@@ -25,17 +25,15 @@
 
       <section class="gallery-project">
         <ul>
-          <li><a href="#"><img src="" width="" height="" alt="SEDONA"></li>
-          <li><a href="#"><img src="" width="" height="" alt="PINK"></li>
-          <li><a href="#"><img src="" width="" height="" alt="BORODINSKI"></li>
-          <li><a href="#"><img src="" width="" height="" alt="MISHKA"></li>
-          <li><a href="#"><img src="" width="" height="" alt="A+"></li>
-          <li><a href="#"><img src="" width="" height="" alt="МАГАЗИН ПИВА"></li>
+          <li><a href="#"><img src="" width="" height="" alt="SEDONA">арт. 001</li>
+          <li><a href="#"><img src="" width="" height="" alt="PINK">арт. 002</li>
+          <li><a href="#"><img src="" width="" height="" alt="BORODINSKI">арт. 003</li>
+          <li><a href="#"><img src="" width="" height="" alt="MISHKA">арт. 004</li>
+          <li><a href="#"><img src="" width="" height="" alt="A+">арт. 005</li>
+          <li><a href="#"><img src="" width="" height="" alt="МАГАЗИН ПИВА">арт. 006</li>
         </ul>
       </section>
-    </main>
 
-    <footer class="footer-chief">
       <section class="contacts">
         <h2>Контакты</h2>
         <p>NERDS DESIGN STUDIO</p>
@@ -45,6 +43,10 @@
         <img src="">
       </section>
 
+    </main>
+
+    <footer>
+      
       <ul>
         <li><a href="#">Вконтакте</a></li>
         <li><a href="#">Фейсбук</a></li>
