--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
           <li><a href="#">СТУДИЯ</a></li>
           <li><a href="#">КЛИЕНТЫ</a></li>
-          <li><a href="#">МАГАЗИН</a></li>
+          <li><a href="catalog.html">МАГАЗИН</a></li>
           <li><a href="#">КОНТАКТЫ</a></li>
         </ul>
         <ul>
@@ -59,6 +59,7 @@
       </section>
 
       <section class="info-privilege">
+        
         <div class="info">
           <p>Мы - маленькая, но гордая
           дизайн-студия из Краснодара.</p>
@@ -96,9 +97,7 @@
           <li><a href="#"><img src=""></a></li>
         </ul>
       </section>
-    </main>
 
-    <footer class="footer-chief">
       <section class="contacts">
         <h2>Контакты</h2>
         <p>NERDS DESIGN STUDIO</p>
@@ -107,6 +106,9 @@
         <a href="#">Напишите нам</a>
         <img src="">
       </section>
+    </main>
+
+    <footer class="footer-chief">
 
       <ul>
         <li><a href="#">Вконтакте</a></li>
