--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Магазин: Нёрдс</title>
   </head>
   <body>
-  <header class="header-top">
+  <header>
     <a class="logo" href="index.html"><img src="" alt="Логотип" width="" height=""></a>
     <nav class="menu">
       <ul>
@@ -13,8 +13,6 @@
         <li><a >КЛИЕНТЫ</a></li>
         <li><a >МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
-      </ul>
-      <ul>
         <li><a class="box" href="#">КОРЗИНА</a></li>
       </ul>
     </nav>
@@ -38,7 +36,7 @@
         <h2>Контакты</h2>
         <p>NERDS DESIGN STUDIO</p>
         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
-        <p>тел. +7(812) 275-75-75</p>
+        <p><a href="tel:+78122757575">тел. +7(812) 275-75-75</a></p>
         <a href="#">Напишите нам</a>
         <img src="">
       </section>
@@ -46,7 +44,7 @@
     </main>
 
     <footer>
-      
+
       <ul>
         <li><a href="#">Вконтакте</a></li>
         <li><a href="#">Фейсбук</a></li>
