--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
           <li><a href="#">КЛИЕНТЫ</a></li>
           <li><a href="catalog.html">МАГАЗИН</a></li>
           <li><a href="#">КОНТАКТЫ</a></li>
-        </ul>
-        <ul>
           <li><a class="box" href="#">КОРЗИНА</a></li>
         </ul>
       </nav>
@@ -33,33 +31,33 @@
       </section>
 
       <section class="services">
-        <ul>
-          <li>
+
+          <div class="web">
             <h3>ВЕБ-САЙТЫ</h3>
             <img src="" width="" height="">
             <p>Мир никогда не будет прежним
             после того как увидит ваш сайт!</p>
             <a href="#">ЗАКАЗАТЬ</a>
-          </li>
-          <li>
+          </div>
+          <div class="apps">
             <h3>ПРИЛОЖЕНИЯ</h3>
             <img src="" width="" height="">
             <p>Покорите ТОП=10 приложений в
               AppStore и Google Play</p>
             <a href="#">ЗАКАЗАТЬ</a>
-          </li>
-          <li>
+          </div>
+          <div class="presentation">
             <h3>ПРЕЗЕНТАЦИИ</h3>
             <img src="" width="" height="">
             <p>Вы даже не подозреваете,
             насколько вы изумительны!</p>
             <a href="#">ЗАКАЗАТЬ</a>
-          </li>
-        </ul>
+          </div>
+
       </section>
 
       <section class="info-privilege">
-        
+
         <div class="info">
           <p>Мы - маленькая, но гордая
           дизайн-студия из Краснодара.</p>
@@ -102,13 +100,13 @@
         <h2>Контакты</h2>
         <p>NERDS DESIGN STUDIO</p>
         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
-        <p>тел. +7(812) 275-75-75</p>
+        <p><a href="tel:+78122757575">тел. +7(812) 275-75-75</a></p>
         <a href="#">Напишите нам</a>
         <img src="">
       </section>
     </main>
 
-    <footer class="footer-chief">
+    <footer>
 
       <ul>
         <li><a href="#">Вконтакте</a></li>
