Добавил чуть-чуть графики
Не поняно как из slide1.png сделать просмотр нескольких фотографий.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   </head>
   <body>
     <header class="header-top">
-      <a class="logo"><img src="" alt="Логотип" width="" height=""></a>
+      <a class="logo"><img src="img/logo.png" alt="Логотип" width="160" height="65"></a>
       <nav class="menu">
         <ul>
           <li><a href="#">СТУДИЯ</a></li>
           <li><a href="#">КЛИЕНТЫ</a></li>
           <li><a href="catalog.html">МАГАЗИН</a></li>
           <li><a href="#">КОНТАКТЫ</a></li>
-          <li><a class="box" href="#">КОРЗИНА</a></li>
+          <li><a class="box" href="#"><img src="img/cart-icon.png" width="15" height="15">КОРЗИНА</a></li>
         </ul>
       </nav>
     </header>
@@ -27,28 +27,28 @@
         <p>Математически выверенный дизайн
          для вашего сайта или мобильного приложения</p>
         <a href="#">УЗНАТЬ БОЛЬШЕ</a>
-        <img src="" alt="" width="" height="">
+        <img src="img/slide1.png" alt="" width="698" height="413">
       </section>
 
       <section class="services">
 
           <div class="web">
             <h3>ВЕБ-САЙТЫ</h3>
-            <img src="" width="" height="">
+            <img src="img/illustration-1.png" width="300" height="146">
             <p>Мир никогда не будет прежним
             после того как увидит ваш сайт!</p>
             <a href="#">ЗАКАЗАТЬ</a>
           </div>
           <div class="apps">
             <h3>ПРИЛОЖЕНИЯ</h3>
-            <img src="" width="" height="">
+            <img src="img/illustration-2.png" width="300" height="146">
             <p>Покорите ТОП=10 приложений в
               AppStore и Google Play</p>
             <a href="#">ЗАКАЗАТЬ</a>
           </div>
           <div class="presentation">
             <h3>ПРЕЗЕНТАЦИИ</h3>
-            <img src="" width="" height="">
+            <img src="img/illustration-3.png" width="300" height="146">
             <p>Вы даже не подозреваете,
             насколько вы изумительны!</p>
             <a href="#">ЗАКАЗАТЬ</a>
@@ -73,7 +73,7 @@
         </div>
 
         <div class="privilege-item">
-          <img src="">
+          <img src="img/nerds-illustration.png" width="360" height="208">
           <p>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
           <dl>
             <dt>146<sup>%</sup></dt>
@@ -89,10 +89,10 @@
       <section class="works">
         <h2>Выполненные проекты</h2>
         <ul>
-          <li><a href="#"><img src="" alt="HTMLAcademy" width="" height="">HTML и CSS, уровень 1</a></li>
-          <li><a href="#"><img src=""></a></li>
-          <li><a href="#"><img src=""></a></li>
-          <li><a href="#"><img src=""></a></li>
+          <li><a href="#"><img src="img/logo-1.png" alt="HTMLAcademy" width="199" height="68">HTML и CSS, уровень 1</a></li>
+          <li><a href="#"><img src="img/logo-2.png" alt="borodinski" width="209" height="90"></a></li>
+          <li><a href="#"><img src="img/logo-3.png" alt="pink" width="185" height="52"></a></li>
+          <li><a href="#"><img src="img/logo-4.png" alt="mishka" width="173" height="84"></a></li>
         </ul>
       </section>
 
@@ -102,7 +102,7 @@
         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
         <p><a href="tel:+78122757575">тел. +7(812) 275-75-75</a></p>
         <a href="#">Напишите нам</a>
-        <img src="">
+        <img src="img/map.png" width="1440" height="416">
       </section>
     </main>
 
