--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <header>
-    <a class="logo" href="index.html"><img src="" alt="Логотип" width="" height=""></a>
+    <a class="logo" href="index.html"><img src="img/logo.png" alt="Логотип" width="160" height="65"></a>
     <nav class="menu">
       <ul>
         <li><a >СТУДИЯ</a></li>
@@ -38,7 +38,7 @@
         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
         <p><a href="tel:+78122757575">тел. +7(812) 275-75-75</a></p>
         <a href="#">Напишите нам</a>
-        <img src="">
+        <img src="img/map.png" width="1440" height="416">
       </section>
 
     </main>
