немного фото в каталог

--- a/catalog.html
+++ b/catalog.html
@@ -23,12 +23,12 @@
 
       <section class="gallery-project">
         <ul>
-          <li><a href="#"><img src="" width="" height="" alt="SEDONA">арт. 001</li>
-          <li><a href="#"><img src="" width="" height="" alt="PINK">арт. 002</li>
-          <li><a href="#"><img src="" width="" height="" alt="BORODINSKI">арт. 003</li>
-          <li><a href="#"><img src="" width="" height="" alt="MISHKA">арт. 004</li>
-          <li><a href="#"><img src="" width="" height="" alt="A+">арт. 005</li>
-          <li><a href="#"><img src="" width="" height="" alt="МАГАЗИН ПИВА">арт. 006</li>
+          <li><a href="#"><img src="img/img-sedona.jpg" width="360" height="576" alt="SEDONA">арт. 001</li>
+          <li><a href="#"><img src="img/img-pink.jpg" width="360" height="576" alt="PINK">арт. 002</li>
+          <li><a href="#"><img src="img/img-barbershop.jpg" width="360" height="576" alt="BORODINSKI">арт. 003</li>
+          <li><a href="#"><img src="img/img-mishka.jpg" width="360" height="576" alt="MISHKA">арт. 004</li>
+          <li><a href="#"><img src="img/img-aplus.jpg" width="360" height="576" alt="A+">арт. 005</li>
+          <li><a href="#"><img src="img/img-kvast.jpg" width="360" height="576" alt="магазин кваса">арт. 006</li>
         </ul>
       </section>
 
