--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
 
       <section class="services">
 
-          <div class="web">
+          <div class="services-item">
             <h3>ВЕБ-САЙТЫ</h3>
             <img src="img/illustration-1.png" width="300" height="146">
             <p>Мир никогда не будет прежним
             после того как увидит ваш сайт!</p>
             <a href="#">ЗАКАЗАТЬ</a>
           </div>
-          <div class="apps">
+          <div class="services-item">
             <h3>ПРИЛОЖЕНИЯ</h3>
             <img src="img/illustration-2.png" width="300" height="146">
             <p>Покорите ТОП=10 приложений в
               AppStore и Google Play</p>
             <a href="#">ЗАКАЗАТЬ</a>
           </div>
-          <div class="presentation">
+          <div class="services-item">
             <h3>ПРЕЗЕНТАЦИИ</h3>
             <img src="img/illustration-3.png" width="300" height="146">
             <p>Вы даже не подозреваете,
@@ -89,7 +89,7 @@
       <section class="works">
         <h2>Выполненные проекты</h2>
         <ul>
-          <li><a href="#"><img src="img/logo-1.png" alt="HTMLAcademy" width="199" height="68">HTML и CSS, уровень 1</a></li>
+          <li><a href="#"><img src="img/logo-1.png" alt="HTMLAcademy" width="199" height="68"></a></li>
           <li><a href="#"><img src="img/logo-2.png" alt="borodinski" width="209" height="90"></a></li>
           <li><a href="#"><img src="img/logo-3.png" alt="pink" width="185" height="52"></a></li>
           <li><a href="#"><img src="img/logo-4.png" alt="mishka" width="173" height="84"></a></li>
@@ -106,7 +106,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer-main">
 
       <ul>
         <li><a href="#">Вконтакте</a></li>
