--- a/catalog.html
+++ b/catalog.html
@@ -6,14 +6,14 @@
   </head>
   <body>
   <header>
-    <a class="logo" href="index.html"><img src="img/logo.png" alt="Логотип" width="160" height="65"></a>
+    <a class="logo" href="#"><img src="img/logo.png" alt="Логотип" width="160" height="65"></a>
     <nav class="menu">
       <ul>
         <li><a >СТУДИЯ</a></li>
         <li><a >КЛИЕНТЫ</a></li>
         <li><a >МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
-        <li><a class="box" href="#">КОРЗИНА</a></li>
+        <li><a class="box" href="#"><img src="img/cart-icon.png" width="15" height="15">КОРЗИНА</a></li>
       </ul>
     </nav>
   </header>
@@ -43,7 +43,7 @@
 
     </main>
 
-    <footer>
+    <footer class="footer-main">
 
       <ul>
         <li><a href="#">Вконтакте</a></li>
