--- a/catalog.html
+++ b/catalog.html
@@ -9,9 +9,9 @@
     <a class="logo" href="#"><img src="img/logo.png" alt="Логотип" width="160" height="65"></a>
     <nav class="menu">
       <ul>
-        <li><a >СТУДИЯ</a></li>
-        <li><a >КЛИЕНТЫ</a></li>
-        <li><a >МАГАЗИН</a></li>
+        <li><a href="#">СТУДИЯ</a></li>
+        <li><a href="#">КЛИЕНТЫ</a></li>
+        <li><a>МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
         <li><a class="box" href="#"><img src="img/cart-icon.png" width="15" height="15">КОРЗИНА</a></li>
       </ul>
