--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="header-top">
@@ -102,16 +103,16 @@
         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
         <p><a href="tel:+78122757575">тел. +7(812) 275-75-75</a></p>
         <a href="#">Напишите нам</a>
-        <img src="img/map.png" width="1440" height="416">
+        <img src="img/map.png" width="1440" height="416"><img src="img/map-marker.png" width="231" height="190" alt="Студия">
       </section>
     </main>
 
     <footer class="footer-main">
 
       <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li><a href="#"><img src="img/Shape_2_copy_5.png" width="79" height="79" alt="подложка для соц.сетей"><img src="img/vk-icon.png" width="26" height="15" alt="ВК"></a></li>
+        <li><a href="#"><img src="img/Shape_2_copy_5.png" width="79" height="79" alt="подложка для соц.сетей"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук"></a></li>
+        <li><a href="#"><img src="img/Shape_2_copy_5.png" width="79" height="79" alt="подложка для соц.сетей"><img src="img/insta-icon.png" width="21" height="21" alt="Инстаграм"></a></li>
       </ul>
 
       <div class="sale">
