--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
         <li><a href="#">КЛИЕНТЫ</a></li>
         <li><a>МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
-        <li><a class="box" href="#"><img src="img/cart-icon.png" width="15" height="15">КОРЗИНА</a></li>
+        <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15">КОРЗИНА</a></li>
       </ul>
     </nav>
   </header>
@@ -21,14 +21,17 @@
     <main>
       <h2>Магазин готовых шаблонов<h2>
 
+      <form>
+      </form>
+
       <section class="gallery-project">
         <ul>
-          <li><a href="#"><img src="img/img-sedona.jpg" width="360" height="576" alt="SEDONA">арт. 001</li>
-          <li><a href="#"><img src="img/img-pink.jpg" width="360" height="576" alt="PINK">арт. 002</li>
-          <li><a href="#"><img src="img/img-barbershop.jpg" width="360" height="576" alt="BORODINSKI">арт. 003</li>
-          <li><a href="#"><img src="img/img-mishka.jpg" width="360" height="576" alt="MISHKA">арт. 004</li>
-          <li><a href="#"><img src="img/img-aplus.jpg" width="360" height="576" alt="A+">арт. 005</li>
-          <li><a href="#"><img src="img/img-kvast.jpg" width="360" height="576" alt="магазин кваса">арт. 006</li>
+          <li><a href="#"><img src="img/img-sedona.jpg" width="360" height="576" alt="SEDONA">арт. 001</a></li>
+          <li><a href="#"><img src="img/img-pink.jpg" width="360" height="576" alt="PINK">арт. 002</a></li>
+          <li><a href="#"><img src="img/img-barbershop.jpg" width="360" height="576" alt="BORODINSKI">арт. 003</a></li>
+          <li><a href="#"><img src="img/img-mishka.jpg" width="360" height="576" alt="MISHKA">арт. 004</a></li>
+          <li><a href="#"><img src="img/img-aplus.jpg" width="360" height="576" alt="A+">арт. 005</a></li>
+          <li><a href="#"><img src="img/img-kvast.jpg" width="360" height="576" alt="магазин кваса">арт. 006</a></li>
         </ul>
       </section>
 
@@ -38,7 +41,7 @@
         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
         <p><a href="tel:+78122757575">тел. +7(812) 275-75-75</a></p>
         <a href="#">Напишите нам</a>
-        <img src="img/map.png" width="1440" height="416"><img src="img/map-marker.png" width="231" height="190" alt="Студия">
+        <img src="img/map.png" width="1440" height="416"><img src="img/map-marker.png" width="231" height="190" alt="Дизайн студия находится по адресу: город Санкт-Петербург, ул. Б. Конюшенная, д. 19.8">
       </section>
 
     </main>
@@ -46,9 +49,9 @@
     <footer class="footer-main">
 
       <ul>
-        <li><a href="#"><img src="img/Shape_2_copy_5.png" width="79" height="79" alt="подложка для соц.сетей"><img src="img/vk-icon.png" width="26" height="15" alt="ВК"></a></li>
-        <li><a href="#"><img src="img/Shape_2_copy_5.png" width="79" height="79" alt="подложка для соц.сетей"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук"></a></li>
-        <li><a href="#"><img src="img/Shape_2_copy_5.png" width="79" height="79" alt="подложка для соц.сетей"><img src="img/insta-icon.png" width="21" height="21" alt="Инстаграм"></a></li>
+        <li><a href="#"><img src="img/vk-icon.png" width="26" height="15" alt="ВК"></a></li>
+        <li><a href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук"></a></li>
+        <li><a href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Инстаграм"></a></li>
       </ul>
 
       <div class="sale">
