--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css/normalize.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="header-top">
-      <a class="logo"><img src="img/logo.png" alt="Логотип" width="160" height="65"></a>
       <nav class="menu">
-        <ul>
-          <li><a href="#">СТУДИЯ</a></li>
-          <li><a href="#">КЛИЕНТЫ</a></li>
-          <li><a href="catalog.html">МАГАЗИН</a></li>
-          <li><a href="#">КОНТАКТЫ</a></li>
-          <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15">КОРЗИНА</a></li>
+        <a class="logo"><img src="img/logo.png" alt="Логотип" width="160" height="65"></a>
+        <ul class="site-nav">
+          <li><a href="#">студия</a></li>
+          <li><a href="#">клиенты</a></li>
+          <li><a href="catalog.html">магазин</a></li>
+          <li><a href="#">контакты</a></li>
+          <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15">корзина</a></li>
         </ul>
       </nav>
     </header>
@@ -34,25 +36,25 @@
       <section class="services">
 
           <div class="services-item">
-            <h3>ВЕБ-САЙТЫ</h3>
+            <h3>веб-сайты</h3>
             <img src="img/illustration-1.png" width="300" height="146">
             <p>Мир никогда не будет прежним
             после того как увидит ваш сайт!</p>
-            <a href="#">ЗАКАЗАТЬ</a>
+            <a href="#">заказать</a>
           </div>
           <div class="services-item">
-            <h3>ПРИЛОЖЕНИЯ</h3>
+            <h3>приложения</h3>
             <img src="img/illustration-2.png" width="300" height="146">
-            <p>Покорите ТОП=10 приложений в
-              AppStore и Google Play</p>
-            <a href="#">ЗАКАЗАТЬ</a>
+            <p>покорите топ-10 приложений в
+              appstore и google play</p>
+            <a href="#">заказать</a>
           </div>
           <div class="services-item">
-            <h3>ПРЕЗЕНТАЦИИ</h3>
+            <h3>презентации</h3>
             <img src="img/illustration-3.png" width="300" height="146">
             <p>Вы даже не подозреваете,
             насколько вы изумительны!</p>
-            <a href="#">ЗАКАЗАТЬ</a>
+            <a href="#">заказать</a>
           </div>
 
       </section>
@@ -60,35 +62,35 @@
       <section class="info-privilege">
 
         <div class="info">
-          <p>Мы - маленькая, но гордая
+          <p>мы - маленькая, но гордая
           дизайн-студия из Краснодара.</p>
-          <p>Исповедуем принципы минимализма и простоты. Ставим математический расчет
-          превыше креатива. Работаем не покладая рук, как роботы.</p>
-          <p>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
+          <p>исповедуем принципы минимализма и простоты. ставим математический расчет
+          превыше креатива. работаем не покладая рук, как роботы.</p>
+          <p>выполняем заказы на разработку:</p>
 
           <ul>
-            <li>Веб-сайтов любой сложности</li>
-            <li>Мобильных приложений для iOS и Android</li>
-            <li>Слайдшоу и видео для корпоративных презентаций</li>
+            <li>веб-сайтов любой сложности</li>
+            <li>мобильных приложений для ios и android</li>
+            <li>слайдшоу и видео для корпоративных презентаций</li>
           </ul>
         </div>
 
         <div class="privilege-item">
           <img src="img/nerds-illustration.png" width="360" height="208">
-          <p>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
+          <p>с 2004 года любим точность во всем:</p>
           <dl>
             <dt>146<sup>%</sup></dt>
-            <dd>Уровень самоотдачи</dd>
+            <dd>уровень самоотдачи</dd>
             <dt>100<sup>%</sup></dt>
-            <dd>Соблюдение сроков</dd>
+            <dd>соблюдение сроков</dd>
             <dt>50<sup>%</sup></dt>
-            <dd>Минимальная предоплата</dd>
+            <dd>минимальная предоплата</dd>
           </dl>
         </div>
       </section>
 
       <section class="works">
-        <h2>Выполненные проекты</h2>
+        <h2>выполненные проекты</h2>
         <ul>
           <li><a href="#"><img src="img/logo-1.png" alt="HTMLAcademy" width="199" height="68"></a></li>
           <li><a href="#"><img src="img/logo-2.png" alt="borodinski" width="209" height="90"></a></li>
@@ -98,11 +100,11 @@
       </section>
 
       <section class="contacts">
-        <h2>Контакты</h2>
+        <h2>контакты</h2>
         <p>NERDS DESIGN STUDIO</p>
         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
         <p><a href="tel:+78122757575">тел. +7(812) 275-75-75</a></p>
-        <a href="#">Напишите нам</a>
+        <a href="#">напишите нам</a>
         <img src="img/map.png" width="1440" height="416"><img src="img/map-marker.png" width="231" height="190" alt="Дизайн студия находится по адресу: город Санкт-Петербург, ул. Б. Конюшенная, д. 19.8 ">
       </section>
     </main>
@@ -116,8 +118,8 @@
       </ul>
 
       <div class="sale">
-        <h3>Давайте дружить, это выгодно!</h3>
-        <p>Скидка 10% для друзей из социальных сетей.</p>
+        <h3>давайте дружить, это выгодно!</h3>
+        <p>скидка 10% для друзей из социальных сетей.</p>
       </div>
     </footer>
   </body>
