--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Магазин: Нёрдс</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css/normalize.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -10,20 +12,20 @@
     <a class="logo" href="#"><img src="img/logo.png" alt="Логотип" width="160" height="65"></a>
     <nav class="menu">
       <ul>
-        <li><a href="#">СТУДИЯ</a></li>
-        <li><a href="#">КЛИЕНТЫ</a></li>
-        <li><a>МАГАЗИН</a></li>
-        <li><a href="#">КОНТАКТЫ</a></li>
-        <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15">КОРЗИНА</a></li>
+        <li><a href="#">студия</a></li>
+        <li><a href="#">клиенты</a></li>
+        <li><a>магазин</a></li>
+        <li><a href="#">контакты</a></li>
+        <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15">корзина</a></li>
       </ul>
     </nav>
   </header>
 
     <main>
-      <h2>Магазин готовых шаблонов<h2>
+      <h2>магазин готовых шаблонов<h2>
 
       <form action="#" method="post" oninput="price-item.value=price.value">
-        <label for="price">Стоимость</label>
+        <label for="price">стоимость</label>
         <br>
         <input type="range" min="0" max="15000" step="100" id="price" name="price">
         <br>
@@ -31,36 +33,35 @@
         до
         <output name="price-item"></output>
 
-        <p>сетка:</p>
-        <label>
-          <input type="radio" name="grid" value="adaptive">Адаптивная
-        </label>
-        <br>
-        <label>
-          <input type="radio" name="grid" value="fixed">Фиксированная
-        </label>
-        <br>
-        <label>
-          <input type="radio" name="grid" value="rubber">Резиновая
-        </label>
-        <br>
+        <fieldset>
+          <legend>сетка:</legend>
+          <label for="adaptive-item">адаптивная</label>
+          <input type="radio" name="grid" id="adaptive-item" value="adaptive">
 
-        <p>особенности:</p>
-        <input type="checkbox" name="slider" id="slider-field" checked>
-        <label for="slider-field">Слайдер</label>
-        <br>
-        <input type="checkbox" name="advantage" id="advantage-field">
-        <label for="advantage-field">Блок преимуществ</label>
-        <br>
-        <input type="checkbox" name="news" id="news-field" checked>
-        <label for="news-field">Новости</label>
-        <br>
-        <input type="checkbox" name="gallery" id="gallery-field">
-        <label for="gallery-field">Галерея</label>
-        <br>
-        <input type="checkbox" name="basket" id="basket-field">
-        <label for="basket-field">Корзина</label>
-        <br>
+          <label for="fixed-item">фиксированная</label>
+          <input type="radio" name="grid" id="fixed-item" value="fixed">
+
+          <label for="rubber-item">резиновая</label>
+          <input type="radio" name="grid" id="rubber-item" value="rubber">
+        </fieldset>
+
+        <fieldset>
+          <legend>особенности:</legend>
+          <input type="checkbox" name="slider" id="slider-field" checked>
+          <label for="slider-field">слайдер</label>
+
+          <input type="checkbox" name="advantage" id="advantage-field">
+          <label for="advantage-field">блок преимуществ</label>
+
+          <input type="checkbox" name="news" id="news-field" checked>
+          <label for="news-field">новости</label>
+
+          <input type="checkbox" name="gallery" id="gallery-field">
+          <label for="gallery-field">галерея</label>
+
+          <input type="checkbox" name="basket" id="basket-field">
+          <label for="basket-field">корзина</label>
+        </fieldset>
 
         <input type="submit" value="показать">
       </form>
@@ -77,7 +78,7 @@
       </section>
 
       <section class="contacts">
-        <h2>Контакты</h2>
+        <h2>контакты</h2>
         <p>NERDS DESIGN STUDIO</p>
         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
         <p><a href="tel:+78122757575">тел. +7(812) 275-75-75</a></p>
@@ -96,8 +97,8 @@
       </ul>
 
       <div class="sale">
-        <h3>Давайте дружить, это выгодно!</h3>
-        <p>Скидка 10% для друзей из социальных сетей.</p>
+        <h3>давайте дружить, это выгодно!</h3>
+        <p>скидка 10% для друзей из социальных сетей.</p>
       </div>
     </footer>
   </body>
