--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <nav class="menu">
         <a class="logo"><img src="img/logo.png" alt="Логотип" width="160" height="65"></a>
         <ul class="site-nav">
-          <li><a href="#">студия</a></li>
-          <li><a href="#">клиенты</a></li>
-          <li><a href="catalog.html">магазин</a></li>
-          <li><a href="#">контакты</a></li>
-          <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15">корзина</a></li>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+          <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15">Корзина</a></li>
         </ul>
       </nav>
     </header>
@@ -29,32 +29,32 @@
         <h2>Долго, дорого, скурпулезно</h2>
         <p>Математически выверенный дизайн
          для вашего сайта или мобильного приложения</p>
-        <a href="#">УЗНАТЬ БОЛЬШЕ</a>
+        <a href="#">Узнать больше</a>
         <img src="img/slide1.png" alt="" width="698" height="413">
       </section>
 
       <section class="services">
 
           <div class="services-item">
-            <h3>веб-сайты</h3>
+            <h3>Веб-сайты</h3>
             <img src="img/illustration-1.png" width="300" height="146">
             <p>Мир никогда не будет прежним
             после того как увидит ваш сайт!</p>
-            <a href="#">заказать</a>
+            <a href="#">Заказать</a>
           </div>
           <div class="services-item">
-            <h3>приложения</h3>
+            <h3>Приложения</h3>
             <img src="img/illustration-2.png" width="300" height="146">
-            <p>покорите топ-10 приложений в
+            <p>Покорите топ-10 приложений в
               appstore и google play</p>
-            <a href="#">заказать</a>
+            <a href="#">Заказать</a>
           </div>
           <div class="services-item">
-            <h3>презентации</h3>
+            <h3>Презентации</h3>
             <img src="img/illustration-3.png" width="300" height="146">
             <p>Вы даже не подозреваете,
             насколько вы изумительны!</p>
-            <a href="#">заказать</a>
+            <a href="#">Заказать</a>
           </div>
 
       </section>
@@ -62,35 +62,35 @@
       <section class="info-privilege">
 
         <div class="info">
-          <p>мы - маленькая, но гордая
+          <p>Мы - маленькая, но гордая
           дизайн-студия из Краснодара.</p>
-          <p>исповедуем принципы минимализма и простоты. ставим математический расчет
+          <p>Исповедуем принципы минимализма и простоты. ставим математический расчет
           превыше креатива. работаем не покладая рук, как роботы.</p>
-          <p>выполняем заказы на разработку:</p>
+          <p>Выполняем заказы на разработку:</p>
 
           <ul>
-            <li>веб-сайтов любой сложности</li>
-            <li>мобильных приложений для ios и android</li>
-            <li>слайдшоу и видео для корпоративных презентаций</li>
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильных приложений для ios и android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
           </ul>
         </div>
 
         <div class="privilege-item">
           <img src="img/nerds-illustration.png" width="360" height="208">
-          <p>с 2004 года любим точность во всем:</p>
+          <p>С 2004 года любим точность во всем:</p>
           <dl>
             <dt>146<sup>%</sup></dt>
-            <dd>уровень самоотдачи</dd>
+            <dd>Уровень самоотдачи</dd>
             <dt>100<sup>%</sup></dt>
-            <dd>соблюдение сроков</dd>
+            <dd>Соблюдение сроков</dd>
             <dt>50<sup>%</sup></dt>
-            <dd>минимальная предоплата</dd>
+            <dd>Минимальная предоплата</dd>
           </dl>
         </div>
       </section>
 
       <section class="works">
-        <h2>выполненные проекты</h2>
+        <h2>Выполненные проекты</h2>
         <ul>
           <li><a href="#"><img src="img/logo-1.png" alt="HTMLAcademy" width="199" height="68"></a></li>
           <li><a href="#"><img src="img/logo-2.png" alt="borodinski" width="209" height="90"></a></li>
@@ -100,11 +100,11 @@
       </section>
 
       <section class="contacts">
-        <h2>контакты</h2>
+        <h2>Контакты</h2>
         <p>NERDS DESIGN STUDIO</p>
         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
         <p><a href="tel:+78122757575">тел. +7(812) 275-75-75</a></p>
-        <a href="#">напишите нам</a>
+        <a href="#">Напишите нам</a>
         <img src="img/map.png" width="1440" height="416"><img src="img/map-marker.png" width="231" height="190" alt="Дизайн студия находится по адресу: город Санкт-Петербург, ул. Б. Конюшенная, д. 19.8 ">
       </section>
     </main>
@@ -118,8 +118,8 @@
       </ul>
 
       <div class="sale">
-        <h3>давайте дружить, это выгодно!</h3>
-        <p>скидка 10% для друзей из социальных сетей.</p>
+        <h3>Давайте дружить, это выгодно!</h3>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
       </div>
     </footer>
   </body>
