--- a/catalog.html
+++ b/catalog.html
@@ -78,14 +78,14 @@
         </ul>
       </section>
     </div>
-    
+
       <section class="contacts">
         <h2>Контакты</h2>
         <p>NERDS DESIGN STUDIO</p>
         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
         <p><a href="tel:+78122757575">тел. +7(812) 275-75-75</a></p>
         <a href="#">Напишите нам</a>
-        <img src="img/map.png" width="1440" height="416"><img src="img/map-marker.png" width="231" height="190" alt="Дизайн студия находится по адресу: город Санкт-Петербург, ул. Б. Конюшенная, д. 19.8">
+        <!--<img src="img/map.png" width="1440" height="416">--><img src="img/map-marker.png" width="231" height="190" alt="Дизайн студия находится по адресу: город Санкт-Петербург, ул. Б. Конюшенная, д. 19.8">
       </section>
 
     </main>
