--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
       </section>
 
       <section class="contacts">
-      <img  class="map" src="img/map.png" width="1440" height="416">
+        <img  class="map" src="img/map.png" width="1440" height="416">
         <div vlass="contacts-item">
           <h2>Контакты</h2>
           <p>NERDS DESIGN STUDIO</p>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
-          <p><a href="tel:+78122757575">тел. +7(812) 275-75-75</a></p>
+          <a href="tel:+78122757575">тел. +7(812) 275-75-75</a>
           <a href="#">Напишите нам</a>
         </div>
         <img class="map-marker" src="img/map-marker.png" width="231" height="190" alt="Дизайн студия находится по адресу: город Санкт-Петербург, ул. Б. Конюшенная, д. 19.8 ">
