--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
       </section>
 
       <section class="contacts">
-        <img  class="map" src="img/map.png" width="1440" height="416">
+        <!--<img  class="map" src="img/map.png" width="1440" height="416">-->
         <div vlass="contacts-item">
           <h2>Контакты</h2>
-          <p>NERDS DESIGN STUDIO</p>
-          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
+          NERDS DESIGN STUDIO
+          191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8
           <a href="tel:+78122757575">тел. +7(812) 275-75-75</a>
           <a href="#">Напишите нам</a>
         </div>
@@ -122,7 +122,7 @@
 
       <div class="sale">
         <h3>Давайте дружить, это выгодно!</h3>
-        <p>Скидка 10% для друзей из социальных сетей.</p>
+        Скидка 10% для друзей из социальных сетей.
       </div>
     </footer>
   </body>
