--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         <!--<img  class="map" src="img/map.png" width="1440" height="416">-->
         <div vlass="contacts-item">
           <h2>Контакты</h2>
-          NERDS DESIGN STUDIO
-          191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8
+          <p>NERDS DESIGN STUDIO</p>
+          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
           <a href="tel:+78122757575">тел. +7(812) 275-75-75</a>
           <a href="#">Напишите нам</a>
         </div>
@@ -125,5 +125,10 @@
         Скидка 10% для друзей из социальных сетей.
       </div>
     </footer>
+    <form clss="form-input">
+      <label for="name"> Ваше имя:
+      </label>
+      <input type="text" id="name" name="name">
+    </form>
   </body>
 </html>
