--- a/catalog.html
+++ b/catalog.html
@@ -16,14 +16,13 @@
         <li><a href="#">Клиенты</a></li>
         <li><a>Магазин</a></li>
         <li><a href="#">Контакты</a></li>
-        <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15">корзина</a></li>
+        <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">корзина</a></li>
       </ul>
     </nav>
   </header>
 
     <main>
-      <h2>Магазин готовых шаблонов<h2>
-
+      <h2>Магазин готовых шаблонов</h2>
       <div class="flex-price">
       <form  class="prices" action="#" method="post" oninput="price-item.value=price.value">
         <fieldset class="price">
@@ -68,6 +67,7 @@
       </form>
 
       <section class="gallery-project">
+        <h2>Галерея шаблонов</h2>
         <ul>
           <li><a href="#"><img src="img/img-sedona.jpg" width="360" height="576" alt="SEDONA">арт. 001</a></li>
           <li><a href="#"><img src="img/img-pink.jpg" width="360" height="576" alt="PINK">арт. 002</a></li>
