--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
           <li><a href="#">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
-          <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15">Корзина</a></li>
+          <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
 
-      <h1>Дизайн студия «Nerds»</h1>
+      <h1 class="visually-hidden">Дизайн студия «Nerds»</h1>
 
       <section class="privilege">
         <h2>Долго, дорого, скурпулезно</h2>
@@ -37,21 +37,21 @@
 
           <div class="services-item">
             <h3>Веб-сайты</h3>
-            <img src="img/illustration-1.png" width="300" height="146">
+            <img src="img/illustration-1.png" width="300" height="146" alt="Иконка веб-сайта">
             <p>Мир никогда не будет прежним
             после того как увидит ваш сайт!</p>
             <a href="#">Заказать</a>
           </div>
           <div class="services-item">
             <h3>Приложения</h3>
-            <img src="img/illustration-2.png" width="300" height="146">
+            <img src="img/illustration-2.png" width="300" height="146" alt="Иконка мобильных приложений">
             <p>Покорите топ-10 приложений в
               appstore и google play</p>
             <a href="#">Заказать</a>
           </div>
           <div class="services-item">
             <h3>Презентации</h3>
-            <img src="img/illustration-3.png" width="300" height="146">
+            <img src="img/illustration-3.png" width="300" height="146" alt="Иконка презентаций">
             <p>Вы даже не подозреваете,
             насколько вы изумительны!</p>
             <a href="#">Заказать</a>
@@ -61,6 +61,7 @@
 
       <section class="info-privilege">
 
+        <h2 class="visually-hidden">Преимущества</h2>
         <div class="info">
           <p>Мы - маленькая, но гордая
           дизайн-студия из Краснодара.</p>
@@ -76,7 +77,7 @@
         </div>
 
         <div class="privilege-item">
-          <img src="img/nerds-illustration.png" width="360" height="208">
+          <img src="img/nerds-illustration.png" width="360" height="208" alt="Изображение логотипа дизайн студии и её преимуществ">
           <p>С 2004 года любим точность во всем:</p>
           <dl>
             <dt>146<sup>%</sup></dt>
@@ -90,7 +91,7 @@
       </section>
 
       <section class="works">
-        <h2>Выполненные проекты</h2>
+        <h2 class="visually-hidden">Выполненные проекты</h2>
         <ul>
           <li><a href="#"><img src="img/logo-1.png" alt="HTMLAcademy" width="199" height="68"></a></li>
           <li><a href="#"><img src="img/logo-2.png" alt="borodinski" width="209" height="90"></a></li>
@@ -101,7 +102,7 @@
 
       <section class="contacts">
         <!--<img  class="map" src="img/map.png" width="1440" height="416">-->
-        <div vlass="contacts-item">
+        <div>
           <h2>Контакты</h2>
           <p>NERDS DESIGN STUDIO</p>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
@@ -125,7 +126,7 @@
         Скидка 10% для друзей из социальных сетей.
       </div>
     </footer>
-    <form clss="form-input">
+    <form class="form-input">
       <label for="name"> Ваше имя:
       </label>
       <input type="text" id="name" name="name">
