Разметка крупных блоков

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header-top">
       <nav class="menu">
-        <a class="logo"><img src="img/logo.png" alt="Логотип" width="160" height="65"></a>
+        <a class="logo"><img src="img/logo.png" alt="Логотип Нёрдс студии" width="160" height="65"></a>
         <ul class="site-nav">
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
@@ -103,7 +103,7 @@
       <section class="contacts">
         <!--<img  class="map" src="img/map.png" width="1440" height="416">-->
         <div>
-          <h2>Контакты</h2>
+          <h2 class="visually-hidden">Контакты</h2>
           <p>NERDS DESIGN STUDIO</p>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
           <a href="tel:+78122757575">тел. +7(812) 275-75-75</a>
